--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "shiki": "^3.12.2",
     "sonner": "^2.0.7",
+    "streamdown": "^1.2.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
   },
